--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,44 +1,36 @@
 <ion-header [translucent]="true">
+  <ion-toolbar color="danger">
+    <ion-title>Juego de movimiento Kinético</ion-title>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
 
   <div class="container">
 
-    <img src="../../../assets/icon.png" alt="Logo" style="max-width: 50%; max-height: 50%; margin: auto;
-    display: block; margin-top: 40px;">
-
-    <h1>JUEGO CINETICO</h1>
+    <h1>Super Héroes</h1>
     
+    <img src="../../../assets/icon_superheroes_png.png" alt="Logo" style="max-width: 50%; max-height: 50%; margin: auto;
+    margin-bottom: -10px; display: block; margin-top: 40px; ">
+
+    <form class="needs-validation" [formGroup]="formLog">
+      <ion-input fill="solid" shape="round" placeholder="Correo" type="email"  formControlName="email"></ion-input>
+      <ion-input fill="solid" shape="round" placeholder="Clave" type="password" formControlName="password"></ion-input>
+      <ion-button class="login" expand="block" (click)="this.iniciarSesion()">JUGAR</ion-button>
+    </form>
+
     <div *ngIf="this.cargaFin == true; then mostrar else esperar"></div>
 
     <ng-template #mostrar>
-      <ion-fab vertical="bottom">
-        <ion-fab-button>
-          <ion-icon name="person-outline" size="large"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-list style="margin-left: -45px;" side="top">
-          <ion-button class="users" shape="round" *ngFor="let item of arrayFirebase" (click)="fastLogin(item.correo, item.clave)">
-            <ion-icon name="person"></ion-icon>&nbsp;
-            <ion-label>{{ item.perfil }}</ion-label>
-          </ion-button>
-        </ion-fab-list>
-      </ion-fab>
+      <ion-button class="quick" *ngFor="let item of arrayTestUsers" (click)="onQuickUser(item)">
+        {{ item.perfil | titlecase }}
+      </ion-button>
     </ng-template>
 
     <ng-template #esperar>
-      <ion-fab vertical="bottom">
-        <ion-fab-button>
-          <ion-icon name="person-outline" size="large"></ion-icon>
-        </ion-fab-button>
-      </ion-fab>
+      <ion-button class="quick">Cargando...</ion-button>
+      <ion-button class="quick">Cargando...</ion-button>
+      <ion-button class="quick">Cargando...</ion-button>
     </ng-template>
-
-    <form class="needs-validation" [formGroup]="formLog">
-      <ion-input fill="outline" shape="round" label="Correo:" labelPlacement="stacked" type="email"  formControlName="email"></ion-input>
-      <ion-input fill="outline" shape="round" label="Clave:" type="password" labelPlacement="stacked" formControlName="password"></ion-input>
-      <ion-button class="login" (click)="this.iniciarSesion()">Ingresar</ion-button>
-    </form>
-
   </div>
 </ion-content>
