--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,6 +1,6 @@
 
 ion-content {
-    --background: linear-gradient(#a5ee15, #33e7ba);
+    --background: #0017e4;
 }
 
 div.container {
@@ -9,49 +9,47 @@ div.container {
     margin-top: 5%;
     margin-left: 5%;
 
-    border: 5px solid rgb(0, 88, 104);
-    border-radius: 10px;
     --overflow: hidden;
 
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 45px;
     font-weight: 600;
-    margin-top: 20px;
-    margin-left: 10%;
+    margin-top: 24px;
+    margin-left: 12%;
     margin-bottom: -15px;
+    color: white;
 }
 
 ion-input {
-    margin-top: 45px;
-    margin-left: 10px;
-    font-size: 24px;
+    margin-top: 40px;
+    font-size: 22px;
 
-    width: 94%;
-
-    --border-width: 3px;
-    color: var(--ion-color-dark);
-    --highlight-color-valid: var(--ion-color-tertiary);
+    width: 100%;
 }
 
 ion-button.login {
     text-transform: initial;
-    --background: rgb(211, 143, 6);
+    --background: rgb(211, 6, 194);
     margin-top: 60px;
-    margin-left: 23px;
+    //margin-left: 3px;
     height: 100px;
-    width: 320px;
-
+    //width: 370px;
+    border: 5px solid rgb(143, 6, 131);
+    border-radius: 10px;
     font-weight: 600;
     font-size: 30px;
 }
 
-ion-button.users {
-    --background: rgb(0, 88, 104);
+ion-button.quick {
+    margin-top: 25px;
+    width: 120px;
+    height: 70px;
+    font-size: 20px;
+    font-weight: 500;
     text-transform: initial;
-    margin-bottom: 7px;
-    margin-left: 160px;
+    --background: rgb(211, 6, 6);
 }
 
 ion-fab-button {
