--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="warning">
     <ion-title>
       Elíge a tu Héroe
     </ion-title>
@@ -27,7 +27,12 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
-    <ion-button (click)="cerraSesion()">cerrar sesion</ion-button>
+  <ion-toolbar color="dark">
+    <ion-buttons slot="start">
+      <ion-button style="height: 55px; width: 140px;" fill="solid" color="danger" aria-label="Logout" (click)="cerraSesion()">cerrar sesion</ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button style="height: 55px; width: 140px;" fill="solid" color="tertiary" aria-label="Logout" (click)="showPuntos()">Ver puntaje</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-footer>
