--- a/src/app/pages/juego/juego.page.html
+++ b/src/app/pages/juego/juego.page.html
@@ -5,10 +5,11 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div class="container">
-    <div class="box" id="box">
-      <img src="../../../{{ heroePath }}" style="max-height: 100px; max-width: 100px;" alt="">
+  <div class="card">
+    <div class="container">
+      <div class="box" id="box">
+        <img src="../../../{{ heroePath }}" style="max-height: 140px; max-width: 140px;" alt="">
+      </div>
     </div>
   </div>
-  <canvas id="canvas"></canvas>
 </ion-content>
